typescript file updated

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <button id="sayHelloBtn">Say Hello</button>
   <div id="helloWorldBlock"></div>
+  <script src="script.js"></script>
 </body>
 </html>
